[package]
name = "pixie-rust"
version = "0.2.0"
authors = ["João Costa <jdpc557@gmail.com>", "André Claudino <claudino@d2x.com.br>"]
readme = "README.md"
license = "MIT"
description = "A recommender system based on Pinterest's Pixie recommender"
edition = "2018"

[dependencies]
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"

[dev-dependencies]
csv = "1"
